--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,24 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --swiper-theme-color: red !important;
+}
+.imagesImg {
+  background-position-x: 250%;
+  background-position-y: 40%;
+  background-repeat: no-repeat;
+  background-size: 80%;
+
+  background-origin: right top;
+}
+.imagesImg:nth-child(1){
+    background-color: lightblue;
+}
+.imagesImg:nth-child(2){
+    background-color: lightcyan;
+}
+.imagesImg:nth-child(3){
+    background-color: lightpink;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
